--- a/bundles/lincko/app/public/styles/submenu/taskdetail.css
+++ b/bundles/lincko/app/public/styles/submenu/taskdetail.css
@@ -477,6 +477,7 @@ styling for sub comments
     line-height: 120px;
     font-size: 40px;
     color: #4E2A84;
+    text-decoration: none;
 }
 
 /*
